# ESP32-Garden-Guardian

./: .gitignore  Cargo.toml  README.md  build.rs  credentials.toml.example  documentation.md  partitions_singleapp.csv  prerequisites.md  rust-toolchain.toml  sdkconfig.defaults  shell.nix
.cargo/: config.toml
src/: config.rs  control.rs  hw.rs  main.rs  sensor.rs  web.rs
